--- a/backend/package.json
+++ b/backend/package.json
@@ -50,8 +50,10 @@
     "@feathersjs/transport-commons": "^4.5.15",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-mongodb": "^6.4.1",
     "feathers-mongoose": "^8.5.1",
     "helmet": "^5.1.0",
+    "mongodb": "^4.7.0",
     "mongodb-core": "^3.2.7",
     "mongoose": "^6.3.6",
     "serve-favicon": "^2.5.0",
@@ -63,6 +65,7 @@
     "@types/cors": "^2.8.13",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongodb": "^4.0.7",
     "@types/serve-favicon": "^2.5.3",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
