--- a/backend/package.json
+++ b/backend/package.json
@@ -48,14 +48,17 @@
     "@feathersjs/feathers": "^4.5.15",
     "@feathersjs/socketio": "^4.5.15",
     "@feathersjs/transport-commons": "^4.5.15",
+    "@seald-io/nedb": "^3.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "feathers-mongodb": "^6.4.1",
     "feathers-mongoose": "^8.5.1",
+    "feathers-nedb": "^6.0.0",
     "helmet": "^5.1.0",
     "mongodb": "^4.7.0",
     "mongodb-core": "^3.2.7",
     "mongoose": "^6.3.6",
+    "multer": "^1.4.5-lts.1",
     "serve-favicon": "^2.5.0",
     "socket.io-client": "2.3.0",
     "winston": "^3.0.0"
@@ -66,6 +69,7 @@
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongodb": "^4.0.7",
+    "@types/multer": "^1.4.7",
     "@types/serve-favicon": "^2.5.3",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
